--- a/wwpc/app/assets/stylesheets/champions.css.scss
+++ b/wwpc/app/assets/stylesheets/champions.css.scss
@@ -1,3 +1,112 @@
 // Place all the styles related to the champions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Inconsolata';
+	z-index: 0;
+}
+
+.container {
+  background-color: black;
+  background-image: asset-url('images/background.jpg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+}
+
+a {
+  color: white;
+  border-bottom: none;
+}
+
+.content {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 800px;
+  padding: 20px 50px 50px 50px;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 10px black;
+  border: solid 1px black;
+  text-align: center;
+  color: white;
+  text-shadow: 0px 0px 4px white;
+}
+
+ul {
+  list-style-type: none;
+  color: white;
+}   
+
+h2 {
+  color: white;
+  font-size: 2.5em;
+  line-height: 2em;
+  border-left: none;
+}
+
+h3 {
+  color: white;
+  font-size: 2em;
+  line-height: 1.2em;
+}
+
+.division {
+  font-size: 1.8em;
+  line-height: 1.5em;
+  padding-top: 15px;
+  text-decoration: underline;
+}
+
+.division a {
+  color: white;
+}
+
+.champion {
+  font-size: 1.8em;
+  line-height: 1.5em;
+  color: white;
+}
+
+.space {
+  margin-top: 50px;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+th {
+  text-align: center;
+}
+table {
+  min-width: 50%;
+  border: 1px solid black;
+}
+
+th {
+  text-align: left;
+  padding: 10px 10px;
+  border-right: 1px solid black;
+  color: white;
+}
+
+td {
+  color: white;
+  padding: 5px 10px;
+  border-right: 1px solid black;
+  border-top: 1px solid black;
+}
+
