--- a/wwpc/app/views/layouts/application.html.erb
+++ b/wwpc/app/views/layouts/application.html.erb
@@ -5,10 +5,12 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<%= yield %>
-
+<div class="container">
+	<div class="content">
+		<%= yield %>
+	</div>
 </body>
 </html>
