--- a/wwpc/app/views/champions/show.html.erb
+++ b/wwpc/app/views/champions/show.html.erb
@@ -17,4 +17,4 @@
 		<%= @champion.defended %>
 	</p>
 
-<br><%= link_to '> go back <', controller: 'champions', action: 'admin' %>
+<%= link_to '> back <', controller: 'champions' %>
