--- a/wwpc/app/assets/stylesheets/champions.css.scss
+++ b/wwpc/app/assets/stylesheets/champions.css.scss
@@ -4,24 +4,38 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: 'Inconsolata';
+	font-family: 'Open Sans', sans-serif;
 	z-index: 0;
 }
 
-.container {
-  background-color: black;
-  background-image: asset-url('images/background.jpg');
+body {
+  background: black asset-url('images/background.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  z-index: 100;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  overflow-y: auto;
+}
+
+.container {
+	background: asset-url('images/pattern1.png');
+	background-size: 200px 200px;
+	background-repeat: repeat;
+  margin-left: auto;
+  margin-right: auto;
+  width: 980px;
+  color: white;
+  text-shadow: 0px 0px 1px white;
+  box-shadow: 0px 0px 10px black;
+}
+
+.header {
+	height: 150px;
+	background: asset-url('images/wwpc-header.png');
+}
+
+.navigation {
+	background-color: white;
+	height: 25px;
 }
 
 a {
@@ -29,84 +43,98 @@ a {
   border-bottom: none;
 }
 
-.content {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  width: 800px;
-  padding: 20px 50px 50px 50px;
-  background-color: rgba(0, 0, 0, 0.7);
-  box-shadow: 0px 0px 10px black;
-  border: solid 1px black;
-  text-align: center;
-  color: white;
-  text-shadow: 0px 0px 4px white;
-}
-
 ul {
   list-style-type: none;
-  color: white;
-}   
+}
 
-h2 {
-  color: white;
-  font-size: 2.5em;
-  line-height: 2em;
+.content {
+	padding: 25px;
+}
+
+h1 {
+  font-size: 1.5em;
   border-left: none;
 }
 
-h3 {
+h2 {
   color: white;
-  font-size: 2em;
+  font-size: 1.2em;
   line-height: 1.2em;
 }
 
-.division {
-  font-size: 1.8em;
-  line-height: 1.5em;
-  padding-top: 15px;
-  text-decoration: underline;
-}
-
-.division a {
-  color: white;
-}
-
-.champion {
-  font-size: 1.8em;
-  line-height: 1.5em;
-  color: white;
-}
-
-.space {
-  margin-top: 50px;
-}
-
 table {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 th {
-  text-align: center;
 }
+
 table {
-  min-width: 50%;
-  border: 1px solid black;
 }
 
 th {
-  text-align: left;
-  padding: 10px 10px;
-  border-right: 1px solid black;
-  color: white;
 }
 
 td {
-  color: white;
-  padding: 5px 10px;
-  border-right: 1px solid black;
-  border-top: 1px solid black;
-}
+} 
 
+@charset "UTF-8";
+/* Starter CSS for Flyout Menu */
+#navigation-bar,
+#navigation-bar ul,
+#navigation-bar li #navigation-bar a {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 14px;
+  line-height: 0.1;
+}
+#navigation-bar {
+  width: auto;
+}
+#navigation-bar ul {
+  zoom: 1;
+  background: #000 asset-url('images/pattern2.png') top left repeat;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+}
+#navigation-bar ul:before {
+  content: '';
+  display: block;
+}
+#navigation-bar ul:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+#navigation-bar a,
+#navigation-bar a:link,
+#navigation-bar a:visited {
+  padding: 15px 20px;
+  display: block;
+  text-decoration: none;
+  color: #ffffff;
+  text-shadow: 0 -1px 1px #586835;
+}
+#navigation-bar a:hover {
+  color: #586835;
+  text-shadow: 0 1px 1px #bdcd9c;
+}
+#navigation-bar li {
+  float: left;
+}
+#navigation-bar li:hover {
+  background: #9cb369 asset-url('images/pattern2.png') top left repeat;
+}
+#navigation-bar li:first-child {
+  border-left: none;
+  -webkit-border-radius: 4px 0 0 4px;
+  -moz-border-radius: 4px 0 0 4px;
+  border-radius: 4px 0 0 4px;
+}
