--- a/wwpc/app/views/layouts/application.html.erb
+++ b/wwpc/app/views/layouts/application.html.erb
@@ -6,11 +6,14 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="container">
+	<%= render "layouts/header" %>
 	<div class="content">
 		<%= yield %>
 	</div>
+	<%= render "layouts/footer" %>
 </body>
 </html>
