--- a/wwpc/app/assets/stylesheets/champions.css.scss
+++ b/wwpc/app/assets/stylesheets/champions.css.scss
@@ -17,9 +17,6 @@ body {
 }
 
 .container {
-	background: asset-url('images/pattern1.png');
-	background-size: 200px 200px;
-	background-repeat: repeat;
   margin-left: auto;
   margin-right: auto;
   width: 980px;
@@ -48,6 +45,10 @@ ul {
 }
 
 .content {
+	background: asset-url('images/pattern1.png');
+	background-size: 150px 150px;
+	background-repeat: repeat;
+	opacity: 0.7;
 	padding: 25px;
 }
 
@@ -98,8 +99,7 @@ td {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid #AAAAAA;
   -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
@@ -123,14 +123,13 @@ td {
   text-shadow: 0 -1px 1px #586835;
 }
 #navigation-bar a:hover {
-  color: #586835;
-  text-shadow: 0 1px 1px #bdcd9c;
 }
 #navigation-bar li {
   float: left;
 }
 #navigation-bar li:hover {
-  background: #9cb369 asset-url('images/pattern2.png') top left repeat;
+  background: #282828;
+	transition: background-color 0.3s ease;
 }
 #navigation-bar li:first-child {
   border-left: none;
