--- a/wwpc/app/views/layouts/_header.html.erb
+++ b/wwpc/app/views/layouts/_header.html.erb
@@ -2,10 +2,10 @@
 	<div class='header'></div>
 	<div id='navigation-bar'>
 		<ul>
-   		<li class='active'><a href='#'><span>Home</span></a></li>
-   		<li><a href='#'><span>Products</span></a></li>
-   		<li><a href='#'><span>Company</span></a></li>
-   		<li class='last'><a href='#'><span>Contact</span></a></li>
+			<li class='active'><%= link_to 'Home', controller: 'champions' %>
+			<li><%= link_to 'Champions', controller: 'champions' %>
+			<li><%= link_to 'The Rules', controller: 'champions' %>
+			<li><%= link_to 'Register', controller: 'champions' %>
 		</ul>
 	</div>
 </div>
