--- a/wwpc/app/views/layouts/application.html.erb
+++ b/wwpc/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wwpc</title>
+  <title>WWPC - <%= @title %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,6 +11,7 @@
 <body>
 <div class="container">
 	<%= render "layouts/header" %>
+	<h1><%= @title %></h1>
 	<div class="content">
 		<%= yield %>
 	</div>
