--- a/wwpc/app/views/layouts/_header.html.erb
+++ b/wwpc/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 	<% if user_signed_in? == false %>
 		<div class='login'>
 			<%= form_for(:user, :url => session_path(:user)) do |f| %>
-  			e-mail: <%= f.text_field :email %>
+  			e-mail: <%= f.text_field :login %>
   			password: <%= f.password_field :password %>
   			<!--<%= f.check_box :remember_me %>
   			<%= f.label :remember_me %>-->
@@ -16,9 +16,9 @@
 		<ul>
 				<li class="<%= 'active' if @title == 'Home' %>"><%= link_to('Home', home_index_path) %></li>
 				<li class="<%= 'active' if @title == 'Champions' %>"><%= link_to('Champions', champions_path) %></li>
-				<li class="<%= 'active' if @title == 'The Rules' %>"><%= link_to('The Rules', champions_path) %></li>
+				<li class="<%= 'active' if @title == 'The Rules' %>"><%= link_to('The Rules', home_rules_path) %></li>
 				<% if user_signed_in? == false %>
-					<li class="<%= 'active' if @title == 'Register' %>"><%= link_to('Register', new_user_registration_path) %></li>
+					<li class="<%= 'active' if @title == 'Registration' %>"><%= link_to('Register', new_user_registration_path) %></li>
 				<% else %>
 					<li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %></li>
 				<% end %>
