--- a/wwpc/app/views/home/index.html.erb
+++ b/wwpc/app/views/home/index.html.erb
@@ -1,2 +1,1 @@
-info: you can click on the divisions<br>
-practice on some wwpc maps: <%= @randomMaps.join '<br>' %>
+This website is under construction<br><br>
