--- a/wwpc/app/views/layouts/_header.html.erb
+++ b/wwpc/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 	<% if user_signed_in? == false %>
 		<div class='login'>
 			<%= form_for(:user, :url => session_path(:user)) do |f| %>
-  			e-mail: <%= f.text_field :login %>
+  			username: <%= f.text_field :login %>
   			password: <%= f.password_field :password %>
   			<!--<%= f.check_box :remember_me %>
   			<%= f.label :remember_me %>-->
