--- a/wwpc/app/views/layouts/_header.html.erb
+++ b/wwpc/app/views/layouts/_header.html.erb
@@ -11,6 +11,10 @@
   			<!--<%= link_to "Forgot your password?", new_password_path(:user) %>-->
 			<% end %>
 		</div>
+  <% else %>
+		<div class='login'>
+      Signed in as <%= current_user.username %>
+    </div>
 	<% end %>
 	<div class='navigation-bar'>
 		<ul>
