--- a/wwpc/app/views/layouts/_header.html.erb
+++ b/wwpc/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 		</div>
   <% else %>
     <div class='login'>
-      Signed in as <%= current_user.username %>
+      signed in as <b><%= current_user.username %></b> (<%= current_user.role %>)
     </div>
 	<% end %>
 	<div class='navigation-bar'>
@@ -21,6 +21,11 @@
 				<li class="<%= 'active' if @title == 'Home' %>"><%= link_to('Home', home_index_path) %></li>
 				<li class="<%= 'active' if @title == 'Champions' %>"><%= link_to('Champions', champions_path) %></li>
 				<li class="<%= 'active' if @title == 'The Rules' %>"><%= link_to('The Rules', home_rules_path) %></li>
+        <% if user_signed_in? %>
+          <% if current_user.role == 'admin' %>
+				    <li class="<%= 'active' if @title == 'Admin' %>"><%= link_to('Admin', admin_index_path) %></li>
+          <% end %>
+        <% end %>
 				<% if user_signed_in? == false %>
 					<li class="<%= 'active' if @title == 'Registration' %>"><%= link_to('Register', new_user_registration_path) %></li>
 				<% else %>
