--- a/wwpc/app/views/users/registrations/new.html.erb
+++ b/wwpc/app/views/users/registrations/new.html.erb
@@ -24,6 +24,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <%= f.hidden_field :role, :value => "banned" %>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
